          statistic analysis of the date certs in the database.

	- Command line options in the EDITOR and/or VISUAL environment
	  variables are honored; for instance, EDITOR="emacs -nw"
	  works now.  (Debian bug #320565.)

        - Additional '--revision' option for 'mtn log' allows logging of
          selected sets of revisions.

        Internal

        - Using 64 bit integer values to represent dates internally. This
          has no user visible effect.


Fri Dec 26 22:08:00 UTC 2008

        0.42 release.

        Changes

        - The output of 'automate show_conflicts' has been changed; a
          default resolution for file content conflicts and user resolutions
          for other conflict types has been added. 'directory_loop_created'
          changed to 'directory_loop'.

        - The French, Brazilian-Portuguese and Japanese translations were
          outdated and thus have been removed from the distribution. In case
          you care about them and want them back, drop us a note at
          monotone-devel@nongnu.org.

        Bugs fixed

        - 'mtn db kill_rev_locally' did not update the inodeprint
          cache when executed from a workspace on which the
          revision's changes where applied.

        - Some recent performance issues have been corrected:
          * since 0.40, there is much more use of hex encoding/decoding.
            These functions have been sped up considerably.
          * since 0.40, every command in an 'automate stdio' session
            would reinitialize the database. This was rather slow, so
            monotone will now keep the database open between commands.

        - The Lua-based contributed Monotone extension introduced in
          0.38 haven't been added to the tarball; this has been fixed.

        - Monotone died if _MTN/options contained an empty / not-existing
          'keydir' entry. This has been fixed. Also, invalid options are now